Terraform/aws/secgrp-gophish-evilginx.tf
resource "aws_security_group" "gophish-evilginx" {
  name = "gophish-evilginx"
  description = "Allow only SSH, HTTP and HTTPS traffic"

  ingress {
    from_port   = 2222
    to_port     = 2222
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = format("%s-%s", var.op_name, "gophish-evilginx")
  }
}
